Mon Apr 13 11:35:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): optimize previous commit.
	  [ruby-list:45954]

Mon Apr 13 10:58:54 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): check encoding compatibility only on
	  real parts.

Sun Apr 19 13:17:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb (Gem::QuickLoader#push_gem_version_on_load_path):
	  check for requirement if the gem is installed.  a patch from
	  Kyosuke MOROHASHI at [ruby-dev:38020].

Wed Apr 15 20:24:49 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_flatten): flatten(0) works as Array#dup.
	  [ruby-core:23168]

	* test/ruby/test_array.rb: add a test for above.

Fri Apr 17 00:45:09 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* dir.c (bracket): fix escape handling for range character in bracket
	  of fnmatch pattern.  e.g., '[a\-c]' should not match 'b'.

Wed Apr 15 11:53:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (fnmatch_helper): use rb_enc_precise_mbclen and
	  fail if bytes are invalid. [ruby-dev:38307]

Tue Apr 14 18:11:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): if same in bytes, path is matching.
	  [ruby-dev:38305]

Sun Apr 12 19:54:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket, fnmatch_helper): compare bytewise first, to get
	  rid of invalid byte sequence.  [ruby-dev:38303]

Wed Apr  8 21:58:12 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_str_dump): buffer length plus one byte for null
	  terminator.  [ruby-dev:38294]

	* test/ruby/test_m17n.rb (test_str_dump): add a test for above.

Wed Apr  8 20:08:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_rstrip_bang): should not sign-expand non-ascii.
	  [ruby-core:23158]

Wed Apr  8 17:29:29 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_chop_bang): reset coderange. [ruby-core:23155]

Tue Apr  7 13:14:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
